# scripvec

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.cass/: playbook.yaml
.ntm/: spawn-state.json
.ntm/human_inbox/: 2026-04-20_14-14-14_agent_crashed.md  2026-04-20_14-14-14_agent_crashed_1.md  2026-04-20_14-14-14_agent_crashed_2.md  2026-04-20_14-14-14_agent_crashed_3.md
.ntm/summaries/: scripvec-20260420-074944.json  scripvec-20260420-183001.json  scripvec-20260420-184058.json
apps/scripvec_cli/: README.md  pyproject.toml
apps/scripvec_cli/src/scripvec_cli/: __init__.py  errors.py  eval_cmd.py  feedback_cmd.py  index_cmd.py  main.py  query_cmd.py  query_log.py  test_contracts.py  version_cmd.py
apps/scripvec_webapp/: business_logic.md
data/eval/: judgments.jsonl  queries.jsonl
docs/policies/: 001_file_and_folder_name_convention.md  002_item_numbering_convention.md  pl-001_file_and_folder_naming_convention.md  pl-002_item_numbering_convention.md  pl-003_change_request_references_use_filename_only.md  pl-004_cr_domain_policies_govern_crs.md  pl_002_item_numbering_convention.md  pl_003_change_request_references_use_filename_only.md
docs/policies/domain_policies/: README.md  pl-001_all_policy_filenames_use_pl_prefix.md  pl_001_all_policy_filenames_use_pl_prefix.md
docs/principles/: 001_vector_retrieval.md
docs/roadmap/: README.md  roadmap.md
docs/specs/adrs/: 001_accepted_no_silent_failures.md  002_accepted_no_role_splitting_in_packages.md  003_accepted_mvp_folder_structure.md  004_accepted_mvp_tooling_floor.md  (+12 more)
(+28 files in other folders)
