[project]
name = "scripvec-cli"
version = "0.0.0"
description = "Typer-backed CLI — query in, verses out. The single MVP deployable."
requires-python = ">=3.12"
dependencies = [
  "scripvec-retrieval",
]

[project.scripts]
scripvec = "scripvec_cli.main:app"

[tool.uv.sources]
scripvec-retrieval = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripvec_cli"]
